[package]
name = "nwc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.30.0"
nostr = { version = "0.30.0", features = ["nip47"] }
serde = "1.0.199"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
bitcoin = { version = "0.31.2", features = ["rand", "rand-std"] }
bitcoin_30 = { package = "bitcoin", version = "0.30.2" }
simplelog = "0.12.2"
log = "0.4.21"
nwc = "0.30.0"
